Fixed top button alignment

--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,7 @@ footer {
 	display:inline-block;
 	vertical-align:middle;
 	color:#00AAFF;
-	padding-right:25px;
+	padding-left:25px;
 	font-size:24px;
 	/*position:absolute;
 	top:0px;*/
